--- a/try1/Base.lproj/Main.storyboard
+++ b/try1/Base.lproj/Main.storyboard
@@ -17,6 +17,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <segmentedControl key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="lZB-4N-RV1">
+                            <rect key="frame" x="0.0" y="160" width="375" height="29"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segments>
+                                <segment title="First"/>
+                                <segment title="Second"/>
+                            </segments>
+                        </segmentedControl>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ImageNameCell" textLabel="3s5-aX-tzD" detailTextLabel="BCL-CN-Wno" style="IBUITableViewCellStyleValue1" id="wLL-6Z-8tl">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
@@ -152,10 +160,10 @@
             </objects>
             <point key="canvasLocation" x="432.80000000000001" y="91.304347826086968"/>
         </scene>
-        <!--View Controller-->
+        <!--Buttons View Controller-->
         <scene sceneID="Q0s-Mq-O8w">
             <objects>
-                <viewController id="SrP-0y-bmw" sceneMemberID="viewController">
+                <viewController id="SrP-0y-bmw" customClass="buttonsViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="yOV-HB-Sp2"/>
                         <viewControllerLayoutGuide type="bottom" id="g2k-aN-rI4"/>
@@ -168,17 +176,49 @@
                                 <rect key="frame" x="164" y="318" width="46" height="30"/>
                                 <state key="normal" title="Button"/>
                             </button>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1cQ-04-ip6">
+                                <rect key="frame" x="0.0" y="64" width="375" height="216"/>
+                            </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PFH-3d-GrE">
+                                <rect key="frame" x="166" y="304" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="buE-nw-9UY">
+                                <rect key="frame" x="128" y="397" width="118" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="114" id="YHt-8e-nnV"/>
+                                </constraints>
+                            </slider>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FGv-Aj-xjq">
+                                <rect key="frame" x="163" y="479" width="51" height="31"/>
+                            </switch>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="0bE-z7-h5B">
+                                <rect key="frame" x="140" y="558" width="94" height="29"/>
+                            </stepper>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="qwh-Pi-2Rf" firstAttribute="centerY" secondItem="bzk-7B-p4j" secondAttribute="centerY" id="BcE-1P-kIQ"/>
+                            <constraint firstItem="1cQ-04-ip6" firstAttribute="leading" secondItem="bzk-7B-p4j" secondAttribute="leading" id="D5F-rd-dmF"/>
+                            <constraint firstItem="1cQ-04-ip6" firstAttribute="centerX" secondItem="qwh-Pi-2Rf" secondAttribute="centerX" id="HQ8-Mk-Lfp"/>
+                            <constraint firstItem="buE-nw-9UY" firstAttribute="centerX" secondItem="FGv-Aj-xjq" secondAttribute="centerX" id="L6f-Ia-stz"/>
+                            <constraint firstItem="FGv-Aj-xjq" firstAttribute="top" secondItem="buE-nw-9UY" secondAttribute="bottom" constant="52" id="UJc-aS-alP"/>
+                            <constraint firstItem="0bE-z7-h5B" firstAttribute="top" secondItem="FGv-Aj-xjq" secondAttribute="bottom" constant="48" id="Vfj-as-YfC"/>
+                            <constraint firstItem="PFH-3d-GrE" firstAttribute="top" secondItem="1cQ-04-ip6" secondAttribute="bottom" constant="24" id="YSn-Rc-ufQ"/>
+                            <constraint firstItem="0bE-z7-h5B" firstAttribute="centerX" secondItem="qwh-Pi-2Rf" secondAttribute="centerX" id="ZKO-Or-QKT"/>
+                            <constraint firstItem="1cQ-04-ip6" firstAttribute="top" secondItem="yOV-HB-Sp2" secondAttribute="bottom" id="heX-jr-fne"/>
+                            <constraint firstItem="buE-nw-9UY" firstAttribute="top" secondItem="qwh-Pi-2Rf" secondAttribute="bottom" constant="49" id="q7O-bM-6YK"/>
+                            <constraint firstItem="buE-nw-9UY" firstAttribute="centerX" secondItem="qwh-Pi-2Rf" secondAttribute="centerX" id="t2C-E8-sWs"/>
                             <constraint firstItem="qwh-Pi-2Rf" firstAttribute="centerX" secondItem="bzk-7B-p4j" secondAttribute="centerX" id="tIk-dy-IZA"/>
+                            <constraint firstItem="PFH-3d-GrE" firstAttribute="centerX" secondItem="qwh-Pi-2Rf" secondAttribute="centerX" id="tc2-7a-2hu"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jyh-1s-sSs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-414" y="864"/>
+            <point key="canvasLocation" x="-415.19999999999999" y="863.1184407796103"/>
         </scene>
         <!--Collection View Controller-->
         <scene sceneID="6p4-r6-YhF">
